use standard methods to embed `jasmine_license.txt`